// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/CombinedSystemMessage should match snapshot 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="@AddedUser1 **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser1",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="You were **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@AddedUser2 **added to the channel** by you."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser2",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot when join leave messages are turned off 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <Connect(Markdown)
      message="You were **added to the channel** by @User1."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "You",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "@User1",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <Connect(Markdown)
      message="@AddedUser2 **added to the channel** by you."
      options={
        Object {
          "atMentions": true,
          "mentionHighlight": false,
          "mentionKeys": Array [
            Object {
              "key": "@AddedUser2",
            },
            Object {
              "key": undefined,
            },
            Object {
              "key": "you",
            },
          ],
          "singleline": true,
        }
      }
    />
    <br />
  </React.Fragment>
</React.Fragment>
`;
